--- a/docs/assets/css/stylesheet.css
+++ b/docs/assets/css/stylesheet.css
@@ -41,16 +41,16 @@ body, html {
 
 body {
   background: #dddddd;
-  color: #4c4d4d;
+  color: #fff;
 }
 
-/*-------- Preloader --------*/
+/*-------- Перезавантаження сторінки --------*/
 .preloader {
   position: fixed;
   width: 100%;
   height: 100%;
   z-index: 999999999 !important;
-  background-color: #fff;
+  background-color: #fff; 
   top: 0;
   left: 0;
   right: 0;
@@ -116,7 +116,8 @@ body {
     transform: translate(24px, 0);
   }
 }
-/*--- Preloader Magnific Popup ----*/
+
+/*--- Чудове спливаюче вікно Preloader ----*/
 .mfp-container .preloader {
   background: transparent;
 }
@@ -207,16 +208,16 @@ dl, ol, ul, pre, blockquote, .table {
   padding: 1.5rem;
 }
 
-/* =================================== */
-/*  2. Helpers Classes
-/* =================================== */
+/* ===================================== */
+/* 2. Допоміжні класи
+/* ===================================== */
 /* Box Shadow */
 .shadow-md {
   -webkit-box-shadow: 0px 0px 50px -35px rgba(0, 0, 0, 0.4) !important;
   box-shadow: 0px 0px 50px -35px rgba(0, 0, 0, 0.4) !important;
 }
 
-/* Border Radius */
+/* Радіус межі */
 .rounded-lg {
   border-radius: 0.6rem !important;
 }
@@ -241,7 +242,7 @@ dl, ol, ul, pre, blockquote, .table {
   border-bottom-right-radius: 0px !important;
 }
 
-/* Border Size */
+/* Розмір рамки */
 .border-1 {
   border-width: 1px !important;
 }
@@ -262,7 +263,7 @@ dl, ol, ul, pre, blockquote, .table {
   border-width: 5px !important;
 }
 
-/* Text Size */
+/* Розмір тексту */
 .text-0 {
   font-size: 11px !important;
   font-size: 0.6875rem !important;
@@ -457,7 +458,7 @@ dl, ol, ul, pre, blockquote, .table {
   line-height: 1.3;
 }
 
-/* Line height */
+/* Висота рядка */
 .line-height-07 {
   line-height: 0.7 !important;
 }
@@ -482,7 +483,7 @@ dl, ol, ul, pre, blockquote, .table {
   line-height: 1.8 !important;
 }
 
-/* Font Weight */
+/* Товщина шрифту */
 .font-weight-100 {
   font-weight: 100 !important;
 }
@@ -519,7 +520,7 @@ dl, ol, ul, pre, blockquote, .table {
   font-weight: 900 !important;
 }
 
-/* Opacity */
+/* Непрозорість */
 .opacity-0 {
   opacity: 0;
 }
@@ -581,7 +582,7 @@ dl, ol, ul, pre, blockquote, .table {
   background-color: #adb5bd !important;
 }
 
-/* Background Dark */
+/* -------------------------------- Background Dark --------------------------------*/
 .bg-dark {
   background-color: #111418 !important;
 }
@@ -637,7 +638,8 @@ hr {
     max-width: 1170px !important;
   }
 }
-/*=== 3.1 Side Navigation ===*/
+
+/*=== 3.1 Бічна навігація ===*/
 .idocs-navigation {
   position: fixed;
   top: 70px;
@@ -729,7 +731,7 @@ hr {
   border-color: #0366d6;
 }
 
-/*=== 3.2 Docs Content ===*/
+/*=== 3.2 Вміст документів ===*/
 .idocs-content {
   position: relative;
   margin-left: 260px;
@@ -757,14 +759,13 @@ hr {
     padding: 0px;
   }
 }
-/*=== 3.3 Section Divider ===*/
+
+/*=== 3.3 Розділювач розділів ===*/
 .divider {
   margin: 4rem 0;
 }
 
-/* =================================== */
-/*  4. Header
-/* =================================== */
+/* =================================== 4. Header =================================== */
 #header {
   -webkit-transition: all 0.5s ease;
   transition: all 0.5s ease;
@@ -1043,7 +1044,7 @@ hr {
 }
 
 .primary-menu.navbar-dropdown-dark ul.navbar-nav > li.dropdown .dropdown-menu {
-  background-color: #252A2C;
+  background-color: #59666b;
   color: #fff;
 }
 .primary-menu.navbar-dropdown-dark ul.navbar-nav > li.dropdown .dropdown-menu .dropdown-menu {
@@ -1693,10 +1694,11 @@ hr {
     color: #fff;
   }
 }
-/* =================================== */
-/*  5. Elements
-/* =================================== */
-/*=== 5.1 List Style ===*/
+
+/* ===================================== */
+/* 5. Елементи
+/* ===================================== */
+/*=== 5.1 Стиль списку ===*/
 .list-style-1 > li {
   position: relative;
   list-style-type: none;
@@ -1731,7 +1733,7 @@ hr {
   border-bottom: 1px solid rgba(250, 250, 250, 0.12);
 }
 
-/*=== 5.2 Changelog ===*/
+/*=== 5.2 Журнал змін ===*/
 .changelog {
   list-style: none;
   padding: 0;
@@ -1746,7 +1748,7 @@ hr {
   line-height: 1.8;
 }
 
-/*=== 5.3 Accordion & Toggle ===*/
+/*=== 5.3 Accordion & перемикачі ===*/
 .accordion .card {
   border: none;
   margin-bottom: 16px;
