--- a/docs/assets/css/stylesheet.css
+++ b/docs/assets/css/stylesheet.css
@@ -195,25 +195,26 @@ h1, h2, h3, h4, h5, h6 {
   font-size: 0.9em; /* Розмір шрифту 75% від стандартного */
 }
 
-/* Медіа-запити для зменшення розміру шрифту на менших екранах */
-@media (max-width: 768px) {
-  .small-font {
-      font-size: 0.65em; /* Розмір шрифту зменшується для середніх екранів */
-  }
-}
-
-@media (max-width: 480px) {
-  .small-font {
-      font-size: 0.55em; /* Розмір шрифту зменшується ще більше для малих екранів */
-  }
-}
-
 h1 {
   font-size: 3rem;
 }
 
 h2 {
   font-size: 2.2rem;
+}
+
+h3{
+  margin-top: 10px;
+}
+
+@media (max-width: 768px) {
+  h1 {
+      font-size: 2.7rem; /* Зменшуємо розмір h1 на мобільних пристроях */
+  }
+  
+  h2 {
+      font-size: 1.8rem; /* Зменшуємо розмір h2 на мобільних пристроях */
+  }
 }
 
 dl, ol, ul, pre, blockquote, .table {
@@ -839,6 +840,12 @@ hr {
 .idocs-navigation-new.docs-navigation-dark .nav .nav .nav-item .nav-link.active:after {
   border-color: #0366d6;
 }
+@media (max-width: 767.98px) {
+  .idocs-navigation-new {
+    border-right: 1px solid rgba(59, 211, 235, 0.1);
+
+  }
+}
 
 /*=== 3.2 Вміст документів ===*/
 .idocs-content {
@@ -847,7 +854,19 @@ hr {
   padding: 0px 50px 50px;
   min-height: 750px;
   transition: all 0.3s;
+  overflow: hidden;
 }
+
+@media (max-width: 767.98px) {
+.idocs-content {
+  position: relative;
+  margin-left: 260px;
+  padding: 0px 15px 15px;
+  min-height: 750px;
+  transition: all 0.3s;
+  overflow: hidden;
+}}
+
 .idocs-content section:first-child {
   padding-top: 3rem;
 }
@@ -2160,7 +2179,7 @@ hr {
 
 /*=== 5.5 Tabs ===*/
 .nav-tabs {
-  border-bottom: 1px solid #d7dee3;
+  border-bottom: 1px solid rgba(59, 211, 235, 0.1);
 }
 .nav-tabs .nav-item .nav-link {
   border: 0;
@@ -2514,7 +2533,7 @@ hr {
   transition: all 0.2s ease;
 }
 #footer .footer-copyright {
-  border-top: 1px solid #e2e8ea;
+  border-top: 1px solid rgba(0, 221, 255, 0.1);;
   padding: 0px 0px;
   color: #67727c;
 }
@@ -2675,6 +2694,15 @@ hr {
     padding: 4rem 0rem 4rem;
   }
 }
+
+/* Для iPad Pro */
+@media (max-width: 1024px) {
+  #footer, #footer-1 {
+      padding: 4rem 0rem 4rem;
+      border-top: 1px solid rgba(59, 211, 235, 0.1);
+  }
+}
+
 
 /*=== 6.1 Social Icons ===*/
 .social-icons {
