--- a/docs/assets/sass/bootstrap/_reboot.scss
+++ b/docs/assets/sass/bootstrap/_reboot.scss
@@ -272,7 +272,7 @@ table {
 
 caption {
   padding-top: $table-cell-padding;
-  padding-bottom: $table-cell-padding;
+  // padding-bottom: $table-cell-padding;
   color: $table-caption-color;
   text-align: left;
   caption-side: bottom;
