--- a/docs/assets/sass/bootstrap/_variables.scss
+++ b/docs/assets/sass/bootstrap/_variables.scss
@@ -364,7 +364,7 @@ $table-border-color:          $border-color !default;
 $table-head-bg:               $gray-200 !default;
 $table-head-color:            $gray-700 !default;
 
-$table-dark-color:            $white !default;
+$table-dark-color:            $gray-100 !default;
 $table-dark-bg:               $gray-800 !default;
 $table-dark-accent-bg:        rgba($white, .05) !default;
 $table-dark-hover-color:      $table-dark-color !default;
