--- a/docs/assets/css/stylesheet.css
+++ b/docs/assets/css/stylesheet.css
@@ -185,7 +185,7 @@ iframe {
 
 /* --------------------------------------------------- */
 h1, h2, h3, h4, h5, h6 {
-  color:  #f8f9fa;
+  color:  #fff;
   line-height: 1.5;
   margin: 0 0 1.5rem 0;
   font-family: Roboto, sans-serif;
